<resources>
    <string name="app_name">Trackernity</string>
    <string name="app_name_alias">Telkom Tracker</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="invalid_input">Cant be empty</string>
    <string name="invalid_dropdown_item">Choose Item Please !</string>
    <string name="login_failed">"Login failed"</string>
    <string name="location_permissions_required_info">You need to accept location permissions to use this app.</string>
    <string name="tracking">Tracking</string>
    <string name="target_reached">You reached the target!</string>
    <string name="run_saved_successfully">Run saved successfully</string>
    <string name="start">Start Tracking</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="stop">Stop Tracking</string>
    <string name="cancel_run">Cancel Run</string>
    <string name="finish">Finish</string>
    <string name="gps_info">GPS is Already Enabled</string>
    <string name="gps_enabled">GPS is Enabled Now</string>
    <string name="gps_not_enabled">GPS is Not Enabled !</string>
    <string name="gps_setting_info">Setting not available</string>
    <string name="continuity">Continuity:</string>
    <string name="remarks">Remarks:</string>
    <string name="lng">Long:</string>
    <string name="lat">Lat:</string>
    <string name="loripsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam varius, ligula sit amet placerat ultricies, urna velit rutrum nunc, eu tincidunt tellus lectus et augue. Donec rutrum aliquam leo vel bibendum.</string>
    <string name="loading">Loading…</string>
    <string name="search_markers">search markers</string>
    <string name="type_a_keyword_remarks">Type a keyword (Remarks)</string>
    <string name="find_markers_around_you">Find Markers around you</string>
    <string name="error_image">Error Image</string>
    <string name="search">Search</string>
    <string name="prompt_userid">UserID</string>
    <string name="prompt_regional">Regional</string>
    <string name="prompt_witel">Witel</string>
    <string name="prompt_unit">Unit</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_from">From</string>
    <string name="prompt_to">To</string>
    <string name="prompt_repeat_password">Repeat Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="register">Register</string>
    <string name="persuasive_signup">Do you have an account?</string>
    <string name="descriptions">Descriptions:</string>
    <string name="alpro">Alpro</string>
    <string name="gangguan">Gangguan</string>
    <string name="send_marker_location">Send Marker Location</string>
    <string name="remarks_dialog">Remarks</string>
    <string name="description_dialog">Description</string>
    <string name="note">Note:</string>
    <string name="meter">meter</string>
    <string name="notes_dialog">Notes</string>
    <string name="jarak_gangguan_dialog">Jarak Gangguan</string>
    <string name="distance_method_dialog">Distance Method</string>
    <string name="prediksi_gangguan">Prediksi Gangguan</string>
    <string name="send_perkiraan_gangguan">Send Perkiraan Gangguan</string>
    <string name="send_gangguan">Send Gangguan</string>
    <string name="live_tracking">Live Tracking</string>
    <string name="versi_01">(versi-01.01)</string>
    <string name="refresh">Refresh</string>
    <string name="prompt_treg">Treg</string>
    <string name="prompt_routes">Routes</string>
    <string name="remarks2_dialog">Remarks 2</string>
</resources>