<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View"/>

        <variable
            name="viewModel"
            type="com.project.trackernity.viewmodels.MainViewModel"/>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/md_theme_dark_background"
        android:paddingTop="30dp"
        android:paddingRight="30dp"
        android:paddingLeft="30dp">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_perkiraan_gangguan"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/userIdEdTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:getUserId="@{viewModel}"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout1">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/jarakGangguanEdTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/jarak_gangguan_dialog"
                app:getJarakGangguan="@{viewModel}"/>
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/linearlayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout2">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout3"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_from">

                <AutoCompleteTextView
                    android:id="@+id/remarksFromDropdown"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    app:getRemarksFrom="@{viewModel}" />
            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:layout_width="30dp"
                android:layout_height="50dp"
                android:background="@drawable/ic_baseline_horizontal_rule_24" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout3Second"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_to">

                <AutoCompleteTextView
                    android:id="@+id/remarksToDropdown"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    app:getRemarksTo="@{viewModel}" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/remarks2_dialog"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            app:layout_constraintTop_toBottomOf="@+id/linearlayout">

            <AutoCompleteTextView
                android:id="@+id/remarks2Dropdown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                app:getRemarks2="@{viewModel}"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description_dialog"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout4">

            <AutoCompleteTextView
                android:id="@+id/descEdTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:getDesc="@{viewModel}"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/notes_dialog"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout5">

            <AutoCompleteTextView
                android:id="@+id/notesEdTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:getNotes="@{viewModel}"/>
        </com.google.android.material.textfield.TextInputLayout>
<!--        <com.google.android.material.textfield.TextInputLayout-->
<!--            style="@style/Widget.Material3.TextInputLayout.FilledBox.ExposedDropdownMenu"-->
<!--            android:id="@+id/textInputLayout6"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:hint="@string/distance_method_dialog"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/textInputLayout5">-->

<!--            <AutoCompleteTextView-->
<!--                android:id="@+id/distanceMethodDropdown"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:inputType="none"/>-->
<!--        </com.google.android.material.textfield.TextInputLayout>-->
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>